# VectorBTanalysis

./: .gitattributes  LICENSE  NASDAQ-100-Stock-Tickers-List.xlsx  NYSE-Arca-Major-Market-Stock-Tickers-List.xlsx  Nasdaq100Tickers.csv  Notebook.ipynb  Russell-1000-Stock-Tickers-List.xlsx  WILSHIRE-5000-Stock-Tickers-List.xlsx  analysis.py  pyproject.toml
.ipynb_checkpoints/: Notebook-checkpoint.ipynb  analysis-checkpoint.py
.virtual_documents/: Notebook.ipynb
