[tool.poetry]
name = "vectorbt_project"
version = "0.1.0"
description = "playing_with_vectorbt"
authors = ["eo1989 <eorlowski6@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
vectorbt = "^0.13.7"
pandas = "^1.1.1"
numpy = "^1.19.1"
numba = "^0.51.1"
yfinance = "^0.1.54"
statistics = "^1.0.3"
finmarketpy = "^0.11.5"
chartpy = "^0.1.8"
findatapy = "^0.1.14"
pyfolio = "^0.9.2"
empyrical = "^0.5.3"
matplotlib = "^3.3.1"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
